[project]
name = "my-blog-practice"
version = "0.1.0"
description = "A simple Python library for demonstration"
authors = [
    { name="pspvv", email="pspvv@gmail.com" }
]
dependencies = [
    "requests",
    "click"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"